--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,7 +20,7 @@ input[type='number']::-webkit-outer-spin-button {
 
 :root {
     --marquee-width: 80vw;
-    --marquee-height: 20vh;
+    --marquee-height: 100%;
     /* --marquee-elements: 12; */ /* defined with JavaScript */
     --marquee-elements-displayed: 5;
     --marquee-element-width: calc(var(--marquee-width) / var(--marquee-elements-displayed));
@@ -43,14 +43,14 @@ input[type='number']::-webkit-outer-spin-button {
     content: "";
     z-index: 1;
 }
-.marquee:before {
-    left: 0;
-    background: linear-gradient(to right, #111 0%, transparent 100%);
-}
-.marquee:after {
-    right: 0;
-    background: linear-gradient(to left, #111 0%, transparent 100%);
-}
+/*.marquee:before {*/
+/*    left: 0;*/
+/*    background: linear-gradient(to right, #111 0%, transparent 100%);*/
+/*}*/
+/*.marquee:after {*/
+/*    right: 0;*/
+/*    background: linear-gradient(to left, #111 0%, transparent 100%);*/
+/*}*/
 .marquee-content {
     list-style: none;
     height: 100%;
